2008-09-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Add support for
	the application/x-ms-wmp mime-type (Closes: #550157)

============ Version 2.23.91

2008-08-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.91
	* data/Makefile.am: Fix make dist

2008-08-28  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_handle_application_message), (bacon_video_widget_close):
	* src/backend/bacon-video-widget-xine.c (frame_output_cb),
	(bacon_video_widget_close):
	Never auto-resize a stream that's already been resized, wait for
	the next file to be opened to do that (Closes: #481944)

2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugins-engine.c
	(totem_plugins_engine_activate_plugin): When we fail to activate
	a plugin, set its GConf key to FALSE, otherwise we get bugged on
	every start up without any ways to disable it

2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_dvb_setup_result):
	Always try to play whatever's supposed to be playing
	after a successful channels setup (Closes: #548539)

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/playlist.ui:
	* src/totem-playlist.c: (init_treeview):
	* src/totem-session.c: Move the playlist treeview model to the
	GtkBuilder UI file. Also remove an extraneous #include.
	(Closes: #454243)

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.1: Update the man page to remove documentation for a now
	non-existent --usage option and freshen up the rest of the
	documentation. (Closes: #548855)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (size_changed_cb):
	When changing screen size through XRandR, update the aspect
	ratio of the visualisation (Closes: #327811)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-functions.sh: Fix a stupid typo
	* data/schemas.sh: Fix another stupid typo,