@@ -1,3 +1,9 @@
+2008-09-08  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/totem-plugins-engine.c
+	(totem_plugins_engine_activate_plugin): Don't ever disable
+	an invisible plugin
+
 2008-09-01  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemPlugin.cpp: Add support for
